--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images4/
+    - assets/images2/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
