--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ flutter:
     - assets/images/
     - assets/images4/
     - assets/images2/
+    - assets/images3/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
